# llama-apk-gen

./: README.md
ai-service/: .env  .gitignore  Dockerfile  README.md  debug-poetry.ps1  pyproject.toml
ai-service/app/: config.py  main.py
ai-service/app/api/v1/: __init__.py  components.py  generate.py  health.py  results.py  stats.py  test_routes.py  websocket.py
ai-service/app/core/: cache.py  celery_app.py  database.py  logger.py  messaging.py  task_manager.py  tasks.py
ai-service/app/core/messaging_backends/: base.py  celery_backend.py
ai-service/app/llm/: __init__.py  base.py  heuristic_provider.py  llama3_provider.py  orchestrator.py  prompt_manager.py
ai-service/app/models/: __init__.py  project_state.py
ai-service/app/models/prompts/: __init__.py  templates.py
ai-service/app/models/schemas/: __init__.py  architecture.py  blockly.py  component_catalog.py  components.py  context.py  core.py  input_output.py  layout.py  validation.py
ai-service/app/services/: pipeline.py  pipeline_integration.py  state_persistence.py  state_resolver.py
ai-service/app/services/analysis/: context_builder.py  domain_aware_intent_analyzer.py  domain_prompts.py  intent_analyzer.py  intent_config.py  intent_orchestrator.py  intent_schemas.py  tier_heuristic.py  tier_llama3.py
ai-service/app/services/generation/: __init__.py  architecture_generator.py  architecture_validator.py  blockly_generator.py  blockly_validator.py  cache_manager.py  heuristic_generator.py  layout_generator.py  layout_validator.py  response_formatter.py
ai-service/app/utils/: datetime_utils.py  logging.py  output_JSON_formatter.py  rate_limiter.py  serialization.py
infra/: .env  docker-compose.yml
