[project]
name = "ai-service"
version = "0.1.0"
description = "AI-powered mobile app generation service"
authors = [
    {name = "Abelti Beshana", email = "obsidian.being.tech@gmail.com"}
]
requires-python = "^3.12"
readme = "README.md"
#packages = [{ include = "app" }]
package-mode = true

dependencies = [
    # Web Framework
    "fastapi>=0.115.6,<0.116.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    
    # Messaging & Caching (Redis only)
    "redis[hiredis]>=5.2.1,<6.0.0",
    
    # Database
    "asyncpg>=0.30.0,<0.31.0",
    
    # Data Validation
    "pydantic>=2.10.6,<3.0.0",
    "pydantic-settings>=2.7.1,<3.0.0",
    
    # HTTP / Networking
    "httpx>=0.28.1,<0.29.0",
    "aiohttp>=3.13.3,<4.0.0",
    "requests>=2.32.5,<3.0.0",
    
    # Utilities
    "loguru>=0.7.3,<0.8.0",
    "tenacity>=9.0.0,<10.0.0",
    "python-multipart>=0.0.20,<0.1.0",
    "rich>=14.2.0,<15.0.0",
    "tabulate>=0.9.0,<0.10.0",
    "rapidfuzz>=3.14.3,<4.0.0",
    
    # Task Queue & Monitoring
    "celery>=5.6.2,<6.0.0",
    "kombu>=5.6.2,<6.0.0",
    "flower>=2.0.1,<3.0.0",
    
    # Logging & Observability
    "prometheus-client>=0.21.1,<0.22.0",
    "python-json-logger>=2.0.7,<3.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "openai (==1.99.9)",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "faker>=33.3.0,<34.0.0",
    
    # Code Quality
    "black>=24.10.0,<25.0.0",
    "ruff>=0.9.1,<0.10.0",
    "mypy>=1.14.1,<2.0.0",
    "pre-commit>=4.0.1,<5.0.0",
    
    # Dev Tools
    "ipython>=8.31.0,<9.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Poetry-specific config (still allowed alongside PEP 621)
[tool.poetry]
packages = [{include = "app"}]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]